--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,9 @@
 <div class="board">
 
   <div style="grid-column-end: span 4; background: white;">
-    ProjectName:
+    <h3 class="mat-h2">ProjectName</h3>
+    <mat-card>Simple card</mat-card>
+    <mat-card>Simple card</mat-card>
   </div>
   <div style="grid-column-end: span 2; background: white;">
     Designed for:
